--- a/h/static/styles/markdown-editor.scss
+++ b/h/static/styles/markdown-editor.scss
@@ -29,7 +29,7 @@
 
   .markdown-tools-button {padding: .4em;}
 
-  .markdown-tools-button, .markdown-tools-toggle, .icon-markdown {
+  .markdown-tools-button, .markdown-tools-toggle, .h-icon-markdown {
     color: $gray;
 
     &:hover {
