--- a/h/static/styles/simple-search.scss
+++ b/h/static/styles/simple-search.scss
@@ -43,7 +43,7 @@
 }
 
 .simple-search-clear {
-  [class^="icon-"], [class*=" icon-"] {
+  [class^="h-icon-"], [class*=" h-icon-"] {
     position: absolute;
     top: 50%;
     left: 50%;
