--- a/h/templates/thread.html
+++ b/h/templates/thread.html
@@ -1,8 +1,8 @@
 <a href="" class="threadexp"
    title="{{vm.collapsed && 'Expand' || 'Collapse'}}"
    ng-if="vm.container.parent.parent"
-   ><span ng-class="{'icon-plus': !!vm.collapsed,
-                     'icon-minus': !vm.collapsed}"></span></a>
+   ><span ng-class="{'h-icon-plus': !!vm.collapsed,
+                     'h-icon-minus': !vm.collapsed}"></span></a>
 
 <!-- Annotation -->
 <div ng-if="vm.container && !vm.container.message">
