--- a/h/templates/privacy.html
+++ b/h/templates/privacy.html
@@ -4,11 +4,11 @@
         class="dropdown-toggle"
         data-toggle="dropdown">
         {{level}}
-        <i class="icon-triangle"></i>
+        <i class="h-icon-triangle"></i>
   </span>
   <ul class="dropdown-menu" role="menu">
     <li ng-repeat="p in levels" ng-click="setLevel(p)">
-    	<i class="small" ng-class="{'icon-earth': p == 'Public', 'icon-locked': p == 'Only Me'}"></i>
+    	<i class="small" ng-class="{'h-icon-earth': p == 'Public', 'icon-locked': p == 'Only Me'}"></i>
     	{{p}}
     </li>
   </ul>
