--- a/h/templates/viewer.html
+++ b/h/templates/viewer.html
@@ -23,7 +23,7 @@
             class="dropdown-toggle"
             data-toggle="dropdown">
         Sorted by {{sort.name | lowercase}}
-        <i class="icon-triangle small"></i>
+        <i class="h-icon-triangle small"></i>
       </span>
       <ul class="dropdown-menu pull-right" role="menu">
         <li ng-click="sort.name = option"
