--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -1,4 +1,5 @@
 @import 'base';
+@import 'mixins/icons';
 @import 'compass/css3/user-interface';
 @import 'compass/layout/stretching';
 @import 'compass/reset/utilities';
@@ -171,7 +172,7 @@ $base-font-size: 14px;
     position: relative;
   }
 
-  [class^="h-icon-"], [class*=" h-icon-"] {
+  @include icons {
     font-family: 'h';
   }
 }
