Remove specific icon class from toolbar stylesheet
This allows the icon name to be changed freely without having to
update unrelated markup or stylesheets.

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -276,7 +276,7 @@ $base-font-size: 14px;
     &:focus { outline: 0; }
     &:hover { color: $link-color-hover; }
 
-    &.h-icon-comment {
+    &.annotator-toolbar-toggle {
       text-shadow:
       0 0 2px $gray-lightest,
       0 0 0 $gray;
