--- a/h/templates/markdown.html
+++ b/h/templates/markdown.html
@@ -1,6 +1,6 @@
 <div ng-hide="readonly" class="markdown-tools" ng-class="preview && 'disable'">
   <span class="markdown-preview-toggle">
-    <a class="icon-markdown" href="https://help.github.com/articles/markdown-basics" title="Parsed as Markdown" target="_blank" />
+    <a class="markdown-tools-badge h-icon-markdown" href="https://help.github.com/articles/markdown-basics" title="Parsed as Markdown" target="_blank" />
     <a href="" class="markdown-tools-toggle" ng-click="togglePreview()" ng-show="!preview">Preview</a>
     <a href="" class="markdown-tools-toggle" ng-click="togglePreview()" ng-show="preview">Write</a>
   </span>
