Clean up nested link styles in annotator-toolbar
Previously this generated a large amount of invalid unused css due to
nesting pseudo classes.

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -251,43 +251,33 @@ $base-font-size: 14px;
     left: 3px;
     z-index: 1;
 
-    a, a:hover, a:active, a:visited, a:link, a:link:hover {
+    a {
       color: $link-color;
     }
   }
 
-  a, a:hover, a:active, a:visited, a:link, a:link:hover {
+  a {
     background: $white;
     font-size: 1.3em;
     line-height: 28px;
-
-    font-smoothing: antialiased;
-    -webkit-font-smoothing: antialiased;
 
     position: absolute;
     left: 5px;
     color: rgba(200, 200, 200, .3);
 
     text-decoration: none;
-    text-shadow:
-    0 0 2px $gray-lightest,
-    0 0 0 $gray;
+    text-shadow: 0 0 2px $gray-lightest, 0 0 0 $gray;
+  }
 
-    &:focus { outline: 0; }
-    &:hover { color: $link-color-hover; }
+  a:focus, a:hover {
+    outline: 0;
+    color: $link-color-hover;
+  }
 
-    &.annotator-toolbar-toggle {
-      text-shadow:
-      0 0 2px $gray-lightest,
-      0 0 0 $gray;
-
-      &:hover {
-        color: fade-out($gray-lightest, .9);
-      }
-    }
+  .annotator-toolbar-toggle:hover {
+    color: fade-out($gray-lightest, .9);
   }
 }
-
 
 /*
   Mobile layout
