--- a/h/static/styles/markdown-editor.scss
+++ b/h/static/styles/markdown-editor.scss
@@ -11,9 +11,13 @@
 }
 
 .markdown-tools {
+  border-top: .1em solid #D3D3D3;
+  border-left: .1em solid #D3D3D3;
+  border-right: .1em solid #D3D3D3;
+  border-radius: .15em .15em 0 0;
   width: 100%;
-  max-height: 1.4em;
-  overflow: hidden;
+  margin-bottom: -.1em;
+  padding: .7em .7em .7em .5em;
   @include user-select(none);
 
   &.disable {
@@ -23,14 +27,7 @@
     }
   }
 
-  .markdown-tools-button {
-    padding: .4em
-  }
-
-  .markdown-preview-toggle {
-    float: right;
-    margin-right: .4em;
-  }
+  .markdown-tools-button {padding: .4em;}
 
   .markdown-tools-button, .markdown-tools-toggle, .icon-markdown {
     color: $gray;
@@ -40,4 +37,7 @@
     }
   }
 
+  .markdown-preview-toggle {
+    float: right;
+  }
 }
