--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -86,13 +86,13 @@
   <div class="form-actions-buttons form-actions-left">
     <button ng-switch-when="edit"
             ng-click="vm.save()"
-            class="btn"><i class="h-icon-checkmark2 btn-icon"></i> Save</button>
+            class="btn"><i class="h-icon-checkmark btn-icon"></i> Save</button>
     <button ng-switch-when="delete"
             ng-click="vm.save()"
-            class="btn"><i class="h-icon-checkmark2 btn-icon"></i> Delete</button>
+            class="btn"><i class="h-icon-checkmark btn-icon"></i> Delete</button>
     <button ng-switch-default
             ng-click="vm.save()"
-            class="btn"><i class="h-icon-checkmark2 btn-icon"></i> Save</button>
+            class="btn"><i class="h-icon-checkmark btn-icon"></i> Save</button>
     <button class="btn btn-clean"
             ng-click="vm.revert()"
             ><i class="h-icon-x btn-icon"></i> Cancel</button>
