Fix icon classes with missing h- namespace

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -117,9 +117,9 @@
   <a class="small magicontrol" href="" title="Edit"
     ng-show="vm.authorize('update')"
     ng-click="vm.edit()"
-    ><i class="icon-copy"></i> Edit</a>
+    ><i class="h-icon-copy"></i> Edit</a>
   <a class="small magicontrol" href="" title="Delete"
     ng-show="vm.authorize('delete')"
     ng-click="vm.delete()"
-    ><i class="icon-x"></i> Delete…</a>
+    ><i class="h-icon-x"></i> Delete…</a>
 </footer>
