--- a/h/templates/privacy.html
+++ b/h/templates/privacy.html
@@ -8,8 +8,9 @@
   </span>
   <ul class="dropdown-menu" role="menu">
     <li ng-repeat="p in levels" ng-click="setLevel(p)">
-    	<i class="small" ng-class="{'h-icon-earth': p == 'Public', 'icon-locked': p == 'Only Me'}"></i>
-    	{{p}}
+      <i class="small" ng-class="{'h-icon-earth': p == 'Public',
+                                  'h-icon-locked': p == 'Only Me'}"></i>
+      {{p}}
     </li>
   </ul>
 </div>
