--- a/h/templates/privacy.html
+++ b/h/templates/privacy.html
@@ -3,6 +3,7 @@
         role="button"
         class="dropdown-toggle"
         data-toggle="dropdown">
+        <i class="small" ng-class="{'h-icon-earth': level == 'Public', 'h-icon-locked': level == 'Only Me'}"></i>
         {{level}}
         <i class="h-icon-triangle"></i>
   </span>
