Drop pyramid_deform and horus HTML views
Close #1552

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -1,9 +1,9 @@
 <div class="form-vertical tabbable"
-     tab-reveal="['forgot', 'activate']"
-     ng-controller="AuthController as auth"
+     tab-reveal="['forgot_password', 'reset_password']"
+     ng-controller="AuthController as vm"
      ng-form="form"
-     ng-model="tab"
-     ng-submit="auth.submit(form[tab])">
+     ng-model="auth.tab"
+     ng-submit="vm.submit(form[auth.tab])">
   <!-- Login -->
   <form data-title="Sign in"
         data-value="login"
@@ -12,7 +12,8 @@
         form-validate
         novalidate>
 
-    <p class="form-description form-error" ng-show="login.$error.response">
+    <p class="form-description form-error"
+       ng-show="login.$error.response">
       {{login.responseErrorMessage}}
     </p>
 
@@ -23,11 +24,14 @@
              ng-model="model.username" ng-minlength="3"
              required autocapitalize="false" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="login.username.$error.required"
+        <li class="form-error"
+            ng-show="login.username.$error.required"
             >Please enter your username.</li>
-        <li class="form-error" ng-show="login.username.$error.minlength"
+        <li class="form-error"
+            ng-show="login.username.$error.minlength"
             >Usernames are at least 3 characters.</li>
-        <li class="form-error" ng-show="login.username.$error.response"
+        <li class="form-error"
+            ng-show="login.username.$error.response"
             >{{login.username.responseErrorMessage}}</li>
       </ul>
     </div>
@@ -39,18 +43,19 @@
              ng-model="model.password"
              required autocapitalize="false" autocorrect="false" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="login.password.$error.required"
+        <li class="form-error"
+            ng-show="login.password.$error.required"
             >Please enter your password.</li>
-        <li class="form-error" ng-show="login.password.$error.response"
+        <li class="form-error"
+            ng-show="login.password.$error.response"
             >{{login.password.responseErrorMessage}}</li>
       </ul>
     </div>
 
     <div class="form-actions">
       <div class="form-actions-message">
-        <a href="" ng-click="tab = 'forgot'">Forgotten your password</a> or
-        <a href="" ng-click="tab = 'activate'"
-           >have an activation code?</a>
+        <a href="" ng-click="auth.tab = 'forgot_password'"
+           >Forgot your password?</a>
       </div>
       <div class="form-actions-buttons">
         <button class="btn btn-primary" type="submit" name="login"
@@ -68,14 +73,15 @@
         form-validate
         novalidate>
 
-    <p class="form-description form-error" ng-show="register.$error.response">
+    <p class="form-description form-error"
+       ng-show="register.$error.response">
       {{register.responseErrorMessage}}
     </p>
 
     <div class="form-field">
-      <label class="form-label" for="field-register-username">Username:
-        <span class="form-hint">(between 3 and 15 characters)</span>
-      </label>
+      <label class="form-label" for="field-register-username"
+             >Username:
+        <span class="form-hint">(between 3 and 15 characters)</span></label>
       <input class="form-input" id="field-register-username"
              type="text" name="username" value=""
              required autocapitalize="false" ng-model="model.username"
@@ -83,50 +89,62 @@
              ng-pattern="/^[A-Za-z0-9._]+$/"
              ng-model-options="{updateOn: 'blur'}" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="register.username.$error.required"
+        <li class="form-error"
+            ng-show="register.username.$error.required"
             >Please choose a username.</li>
-        <li class="form-error" ng-show="register.username.$error.minlength"
+        <li class="form-error"
+            ng-show="register.username.$error.minlength"
             >Usernames must be at least 3 characters.</li>
-        <li class="form-error" ng-show="register.username.$error.maxlength"
+        <li class="form-error"
+            ng-show="register.username.$error.maxlength"
             >Usernames must be 15 characters at most.</li>
-        <li class="form-error" ng-show="register.username.$error.pattern"
+        <li class="form-error"
+            ng-show="register.username.$error.pattern"
             >Only letters, numbers, underscore and dot are allowed.</li>
-        <li class="form-error" ng-show="register.username.$error.response"
+        <li class="form-error"
+            ng-show="register.username.$error.response"
             >{{register.username.responseErrorMessage}}</li>
       </ul>
     </div>
 
     <div class="form-field">
-      <label class="form-label" for="field-register-email">Email Address:</label>
+      <label class="form-label" for="field-register-email"
+             >Email Address:</label>
       <input class="form-input" id="field-register-email"
              type="email" name="email" value=""
              ng-model="model.email" required autocapitalize="false"
              ng-model-options="{updateOn: 'blur'}" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="register.email.$error.email"
+        <li class="form-error"
+            ng-show="register.email.$error.email"
             >Is this an email address?</li>
-        <li class="form-error" ng-show="register.email.$error.required"
+        <li class="form-error"
+            ng-show="register.email.$error.required"
             >Please enter your email.</li>
-        <li class="form-error" ng-show="register.email.$error.response"
+        <li class="form-error"
+            ng-show="register.email.$error.response"
             >{{register.email.responseErrorMessage}}</li>
       </ul>
     </div>
 
     <div class="form-field">
-      <label class="form-label" for="field-register-password">Password:
-        <span class="form-hint">(at least two characters)</span>
-      </label>
+      <label class="form-label" for="field-register-password"
+             >Password:
+        <span class="form-hint">(at least two characters)</span></label>
       <input id="field-register-password" class="form-input"
              type="password" name="password" value=""
              required autocapitalize="false" autocorrect="false"
              ng-minlength="2" ng-model="model.password"
              ng-model-options="{updateOn: 'blur'}" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="register.password.$error.required"
+        <li class="form-error"
+            ng-show="register.password.$error.required"
             >Please enter a password.</li>
-        <li class="form-error" ng-show="register.password.$error.minlength"
+        <li class="form-error"
+            ng-show="register.password.$error.minlength"
             >Passwords must be at least 2 characters.</li>
-        <li class="form-error" ng-show="register.password.$error.response"
+        <li class="form-error"
+            ng-show="register.password.$error.response"
             >{{register.password.responseErrorMessage}}</li>
       </ul>
     </div>
@@ -143,64 +161,77 @@
 
   <!-- Forgot password -->
   <form data-title="Confirm account"
-        data-value="forgot"
+        data-value="forgot_password"
         class="form tab-pane"
-        name="forgot"
+        name="forgot_password"
         form-validate
         novalidate>
 
-    <p class="form-description form-error" ng-show="forgot.$error.response">
-      {{forgot.responseErrorMessage}}
+    <p class="form-description form-error"
+       ng-show="forgot_password.$error.response">
+      {{forgot_passwordresponseErrorMessage}}
     </p>
     <div class="form-field">
-      <label class="form-label" for="field-forgot-email">Please enter your email address:</label>
+      <label class="form-label" for="field-forgot-email"
+             >Please enter your email address:</label>
       <input class="form-input" id="field-forgot-email"
              type="email" name="email" value=""
              required autocapitalize="false" ng-model="model.email" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="forgot.email.$error.email">Is this an email address?</li>
-        <li class="form-error" ng-show="forgot.email.$error.required">Please enter your email.</li>
-        <li class="form-error" ng-show="forgot.email.$error.response"
-            >{{forgot.email.responseErrorMessage}}</li>
+        <li class="form-error"
+            ng-show="forgot_password.$error.email"
+            >Is this an email address?</li>
+        <li class="form-error"
+            ng-show="forgot_password.$error.required"
+            >Please enter your email.</li>
+        <li class="form-error"
+            ng-show="forgot_password.$error.response"
+            >{{forgot_passwordemail.responseErrorMessage}}</li>
       </ul>
     </div>
 
     <div class="form-actions">
       <div class="form-actions-buttons">
-        <button class="btn" type="submit" name="forgot"
-                status-button="forgot">Request access</button>
+        <button class="btn" type="submit" name="forgot_password"
+                status-button="forgot_password">Request access</button>
       </div>
     </div>
   </form>
   <!-- / Forgot password -->
 
-  <!-- Activate -->
+  <!-- Reset password -->
   <form data-title="Activate an account"
-        data-value="activate"
+        data-value="reset_password"
         class="form tab-pane"
-        name="activate"
+        name="reset_password"
         form-validate
         novalidate>
 
-    <p class="form-description form-error" ng-show="activate.$error.response">
-      {{activate.responseErrorMessage}}
+    <p class="form-description form-error"
+       ng-show="reset_password.$error.response">
+      {{reset_password.responseErrorMessage}}
     </p>
 
     <div class="form-field">
-      <label class="form-label" for="field-activate-code">Your activation code:</label>
+      <label class="form-label" for="field-activate-code"
+             >Your activation code:</label>
       <input class="form-input" id="field-activate-code"
              type="text" name="code" value=""
              required autocorrect="false" autocapitalize="false"
              ng-model="model.code" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="activate.code.$error.required">Please enter your activation code</li>
-        <li class="form-error" ng-show="activate.code.$error.response"
-            >{{activate.code.responseErrorMessage}}</li>
+        <li class="form-error"
+            ng-show="reset_password.code.$error.required"
+            >Please enter your activation code</li>
+        <li class="form-error"
+            ng-show="reset_password.code.$error.response"
+            >{{reset_password.code.responseErrorMessage}}</li>
       </ul>
     </div>
 
     <div class="form-field">
-      <label class="form-label" for="field-activate-password">Account password:
+      <label class="form-label" for="field-activate-password"
+             >Account password:
         <span class="form-hint">(at least two characters)</span>
       </label>
       <input class="form-input" id="field-activate-password"
@@ -208,12 +239,15 @@
              required autocapitalize="false" autocorrect="false"
              ng-minlength="2" ng-model="model.password" />
       <ul class="form-error-list">
-        <li class="form-error" ng-show="activate.password.$error.required"
+        <li class="form-error"
+            ng-show="reset_password.password.$error.required"
             >Please choose a password.</li>
-        <li class="form-error" ng-show="activate.password.$error.minlength"
+        <li class="form-error"
+            ng-show="reset_password.password.$error.minlength"
             >Passwords must be at least 2 characters.</li>
-        <li class="form-error" ng-show="activate.password.$error.response"
-            >{{activate.password.responseErrorMessage}}</li>
+        <li class="form-error"
+            ng-show="reset_password.password.$error.response"
+            >{{reset_password.password.responseErrorMessage}}</li>
       </ul>
     </div>
 
@@ -224,5 +258,5 @@
       </div>
     </div>
   </form>
-  <!--/ Activate -->
+  <!--/ Reset password -->
 </div>
