Notifications tab stub
This tab will list the user's notifications.
A new tab is better (even if now it is a one element list) because
works differently then the rest of the account data.

--- a/h/templates/client/account.html
+++ b/h/templates/client/account.html
@@ -1,5 +1,9 @@
-<div class="tabbable" ng-controller="AccountController">
-  <div class="tab-pane" title="Account">
+<div class="tabbable"
+     tab-reveal="['account', 'notifications']"
+     ng-controller="AccountController"
+     ng-model="tab"
+>
+  <div class="tab-pane" title="Account" ng-click="tab = 'account'">
     <form class="account-form form" name="changePasswordForm" ng-submit="submit(changePasswordForm)" novalidate form-validate>
       <h2 class="form-heading"><span>Change Your Password</span></h2>
 
@@ -65,5 +69,7 @@
         </div>
       </div>
     </form>
+  </div>
+  <div class="tab-pane" title="Notifications" ng-click="tab = 'notifications'">
   </div>
 </div>
