Override the focus style in the toolbar toggle
It was originally only applied on hover and was causing display
inconsistencies in FF/IE where the toggle would turn red.

Fixes #1567

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -274,8 +274,10 @@ $base-font-size: 14px;
     color: $link-color-hover;
   }
 
-  .annotator-toolbar-toggle:hover {
-    color: fade-out($gray-lightest, .9);
+  .annotator-toolbar-toggle {
+    &:hover, &:focus {
+      color: fade-out($gray-lightest, .9);
+    }
   }
 }
 
