Validate that email exists on forgot_password
Close #1570

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -186,7 +186,7 @@
             >Please enter your email.</li>
         <li class="form-error"
             ng-show="forgot_password.$error.response"
-            >{{forgot_passwordemail.responseErrorMessage}}</li>
+            >{{forgot_password.email.responseErrorMessage}}</li>
       </ul>
     </div>
 
