Add a simpler grid system
This replaces the YUI module we had before and implements only the parts
of the system that we need at the moment leaving a far cleaner and more
readable api.

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -56,7 +56,7 @@ ol {
 
   @include respond-to(tablets desktops) {
     margin: auto;
-    max-width: $break-medium;
+    max-width: $break-tablet;
     padding-left: 4em;
     padding-right: 4em;
   }
