--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -5,6 +5,7 @@ $black: #000 !default;
 
 // GRAYS
 $gray: #777 !default;
+$gray-darker: #333;
 $gray-dark: #585858;
 $gray-light: #969696 !default;
 $gray-lighter: #d3d3d3 !default;
