--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -201,8 +201,8 @@ $base-font-size: 14px;
 }
 
 .annotator-frame .annotator-toolbar.annotator-hide {
-  display: initial;
-  visibility: initial;
+  display: block;
+  visibility: visible;
 
   li {
     @include transition-delay(.75s);
