Add onboarding specific intro to help page

--- a/h/static/styles/help-page.scss
+++ b/h/static/styles/help-page.scss
@@ -130,3 +130,16 @@
 .help-icon {
     @include help-icon;
 }
+
+.bookmarklet {
+  color: $gray-darker;
+  padding: 2px 4px;
+  border: 1px solid;
+  border-radius: 2px;
+  font-size: 13px;
+  cursor: move;
+
+  @include icons {
+    font-size: 12px;
+  }
+}
